mocha/apps/trmnl-server/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: trmnl-server
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`trmnl.mocha.thoughtless.eu`)
      services:
        - name: trmnl-server
          port: 443
          scheme: https
          serversTransport: trmnl-server-backend
  tls:
    secretName: trmnl-server-tls
